6 August 2018: Wouter
	- Fix for #4136: Fix to unconditionally call destroy in daemon.c.

3 August 2018: George
	- Expose if a query (or a subquery) was ratelimited (not src IP
	  ratelimiting) to libunbound under 'ub_result.was_ratelimited'.
	  This also introduces a change to 'ub_event_callback_type' in
	  libunbound/unbound-event.h.
	- Tidy pylib tests.

3 August 2018: Wouter
	- Revert previous change for #4136: because it introduces build
	  problems.
	- New fix for #4136: This one ignores lex without without
	  yylex_destroy.

1 August 2018: Wouter
	- Fix to remove systemd sockaddr function check, that is not
	  always present.  Make socket activation more lenient.  But not
	  different when socket activation is not used.
	- iana port list update.

31 July 2018: Wouter
	- Patches from Jim Hague (Sinodun) for EDNS KeepAlive.
	- Sort out test runs when the build directory isn't the project
	  root directory.
	- Add config tcp-idle-timeout (default 30s). This applies to
	  client connections only; the timeout on TCP connections upstream
	  is unaffected.
	- Error if EDNS Keepalive received over UDP.
	- Add edns-tcp-keepalive and edns-tcp-keepalive timeout options
	  and implement option in client responses.
	- Correct and expand manual page entries for keepalive and idle timeout.
	- Implement progressive backoff of TCP idle/keepalive timeout.
	- Fix 'make depend' to work when build dir is not project root.
	- Add delay parameter to streamtcp, -d secs.
	  To be used when testing idle timeout.
	- From Wouter: make depend, the dependencies in the patches did not
	  apply cleanly.  Also remade yacc and lex.
	- Fix mesh.c incompatible pointer pass.
	- Please doxygen so it passes.
	- Fix #4139: Fix unbound-host leaks memory on ANY.

30 July 2018: Wouter
	- Fix #4136: insufficiency from mismatch of FLEX capability between
	  released tarball and build host.

27 July 2018: Wouter
	- Fix man page, say that chroot is enabled by default.

26 July 2018: Wouter